--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://gitee.com/qian_zehao"
+  github           : "qianzehao123"
   google_plus      :
   keybase          :
   instagram        :
