--- a/_config.yml
+++ b/_config.yml
@@ -111,9 +111,9 @@ author:
   tumblr           :
   twitter          : 
   vine             :
-  weibo            :
+  weibo            : "https://weibo.com/u/6141846170"
   xing             :
-  youtube          :
+  youtube          : "https://www.youtube.com/@QianZehao"
   wikipedia        :
 
 
