--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   tumblr           :
   twitter          : 
   vine             :
-  weibo            : "https://weibo.com/u/6141846170"
+  weibo            : "u/6141846170"
   xing             :
   youtube          : "https://www.youtube.com/@QianZehao"
   wikipedia        :
