--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            : "u/6141846170"
   xing             :
-  youtube          : "https://www.youtube.com/@QianZehao"
+  youtube          : "@QianZehao"
   wikipedia        :
 
 
