--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "钱泽昊"
   avatar           : "profile.png"
-  bio              : "Free leek foundation, cyber immortals, like machinery and electronics, but the spirit can soar."
+  bio              : "Free Leek Foundation, Cyber Immortals, Machinery and Electronics Engineer"
   location         : "Tianjin, China"
   employer         :
   pubmed           : 
