--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,9 @@ main:
   # - title: "Projects"
   #   url: /projects/
 
+  - title: "OpenIE"
+    url: /OpenIE/
+
   - title: "Nashsweeper"
     url: /nashsweeper/
 
