--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "钱泽昊"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Free Leek Foundation, Cyber Immortals, Machinery and Electronics Engineer"
   location         : "Tianjin, China"
   employer         :
